# up-take

./: .commitlintrc.yaml  .gitattributes  .gitignore  .markdownlint.yaml  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  biome.json  deny.toml  package.json  pnpm-lock.yaml  vite.config.js
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
crates/uptake-core/: Cargo.toml
crates/uptake-core/proptest-regressions/: interaction.txt
crates/uptake-core/src/: area.rs  geometry.rs  interaction.rs  lib.rs
src/: app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: click_through.rs  dev_harness.rs  display_watch.rs  hotkey.rs  lib.rs  main.rs  overlay.rs  overlay_state.rs  overlay_wndproc.rs  placement.rs  tray.rs
src/lib/: overlay-state.test.ts  overlay-state.ts  regions.test.ts  regions.ts
src/routes/: +page.svelte
