[package]
name = "up-take"
description = "AI-powered screen intelligence overlay for Windows. Capture, OCR, understand — locally."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish.workspace = true

# Kept deliberately thin: Tauri commands, window lifecycle, tray. Business logic
# belongs in the crates/ members — see the workspace manifest.

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "up_take_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
uptake-core = { workspace = true }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
